[project]
name = "gameplay-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bracket-city-mcp",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.4.8",
    "langmem>=0.0.27",
]

[tool.uv.sources]
bracket-city-mcp = { git = "https://github.com/aplassard/bracket-city-mcp.git" }
