[project]
name = "gameplay-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bracket-city-mcp",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-socketio>=5.5.1",
    "langchain-community>=0.3.26",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-openai>=0.3.24",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.4.8",
    "langmem>=0.0.27",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "tenacity>=8.2.3", # Added tenacity for retry logic
    "wordle-python",
    "llmutils",
]

[tool.uv.sources]
bracket-city-mcp = { git = "https://github.com/aplassard/bracket-city-mcp.git" }
wordle-python = { git = "https://github.com/aplassard/wordle-python.git" }
llmutils = { git = "https://github.com/aplassard/llm-utils.git" }

[tool.setuptools.packages.find]
include = ["wordle_agent*", "bracket_city_eval*"]